--- a/styles/Leaderboard.scss
+++ b/styles/Leaderboard.scss
@@ -2,8 +2,10 @@
     margin:2rem 10rem;
     max-width:600px;
     //flex-wrap: wrap;
+}
 
-
+.lb-box-container{
+    
 }
 @media only screen and (max-width: $mobile-res) {
     .lb-container{
